fixed popup modal display on mobile

--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ text-decoration: underline;
     }
 
     .header-tommorow, .header-2nd, .header-3rd, .header-4th, .header-5th {
-        padding: .5rem 0;
+        padding: 0;
     }
 
     .close1, .close2, .close3, .close4, .close5 {
@@ -323,9 +323,9 @@ text-decoration: underline;
         font-size: 1rem;
     }
 
-    .modal1-body {
+    .modal1-body, .modal2-body, .modal3-body, .modal4-body {
         grid-template-columns: 1fr;
-  }
+    }
 
     .iconify {
     font-size: 1.5rem;
